--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: jiecheng.luo.20@ucl.ac.uk
-#phone: 888 888 88 88
+phone: 320 433 0484
  address:
    street: 1-19 Torrington Place
    city: London
