--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,8 +21,8 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: jiecheng.luo.20@ucl.ac.uk
-phone: 320 433 0484
- address:
+# phone: 320 433 0484
+address:
    street: 1-19 Torrington Place
    city: London
 #   region: CA
